--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ main {
     width: 900px;
     padding: 30px;
     background-color: var(--white);
-    border-radius: 1rem;
+    border-radius: 2rem;
     box-shadow: 0 0 1px var(--grey-400);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -53,6 +53,7 @@ main {
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+    justify-content: space-between;
 }
 
 .main-calculator-input-inner,
@@ -79,6 +80,12 @@ main {
 .main-calculator-input-tip-container-error {
     color: var(--red);
     font-weight: var(--f-weight);
+    display: none;
+}
+
+.main-calculator-input-inner-error-active,
+.main-calculator-input-tip-container-error-active {
+    display: unset;
 }
 
 /* BILL INPUT CONTAINER */
@@ -91,6 +98,10 @@ main {
     overflow: hidden;
     background-color: var(--grey-50);
     border: 2px solid rgba(255,255,255,0);
+}
+
+.main-calculator-input-inner-container-error {
+    border: 2px solid var(--red);
 }
 
 .main-calculator-input-inner-container:focus-within {
@@ -159,4 +170,72 @@ main {
 
 .main-calculator-input-tip-container-input:focus {
     border: 2px solid var(--green-400);
+}
+
+/* MAIN CALCULATOR OUTPUT */
+
+.main-calculator-output {
+    background-color: var(--green-900);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px;
+}
+
+/* MAIN CALCULATOR OUTPUTS */
+
+.main-calculator-outputs {
+    display: flex;
+    flex-direction: column;
+    row-gap: 25px;
+}
+
+.main-calculator-outputs-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-calculator-outputs-inner-itself {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-calculator-outputs-inner-itself-header {
+    color: var(--white);
+}
+
+.main-calculator-outputs-inner-itself-subheader {
+    color: var(--grey-400);
+}
+
+.main-calculator-outputs-inner-text {
+    font-weight: var(--f-weight);
+    color: var(--green-400);
+    font-size: 2.5rem;
+    line-height: 1cap;
+}
+
+/* MAIN CALCULATOR OUTPUT RESET BUTTON */
+
+.main-calculator-output-reset-button {
+    font-size: 1.2rem;
+    padding-block: 10px;
+    font-weight: var(--f-weight);
+    border-radius: 0.3rem;
+    border: 0;
+    color: var(--green-900);
+    background-color: var(--green-400);
+    cursor: pointer;
+}
+
+.main-calculator-output-reset-button:hover {
+    background-color: var(--grey-200);
+}
+
+.main-calculator-output-reset-button:disabled {
+    background-color: var(--grey-500);
+    color: var(--green-900);
+    pointer-events: none;
 }
