--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ main {
     align-items: center;
     justify-content: center;
     row-gap: 70px;
+    padding-block: 80px;
 }
 
 /* MAIN CALCULATOR */
@@ -44,7 +45,7 @@ main {
     box-shadow: 0 0 1px var(--grey-400);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 30px;
+    gap: 30px;
 }
 
 /* MAIN CALCULATOR INPUT */
@@ -91,6 +92,7 @@ main {
 /* BILL INPUT CONTAINER */
 
 .main-calculator-input-inner-container {
+    width: 100%;
     height: 50px;
     display: grid;
     grid-template-columns: auto 1fr;
@@ -116,6 +118,7 @@ main {
 }
 
 .main-calculator-input-inner-container-input {
+    width: 100%;
     border: 0;
     outline: none;
     font-size: 24px;
@@ -237,4 +240,40 @@ main {
     background-color: var(--grey-500);
     color: var(--green-900);
     pointer-events: none;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 1000px) {
+    .main-calculator {
+        width: calc(100% - 40px);
+    }
+}
+
+@media (max-width: 880px) {
+    .main-calculator {
+        grid-template-columns: 1fr;
+    }
+    .main-calculator-output {
+        row-gap: 80px;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        background-color: var(--white);
+    }
+    .main-calculator {
+        width: 100%;
+        border: 0;
+        box-shadow: 0 0 0 transparent;
+        border-radius: 0;
+        padding: 20px;
+    }
+    .main-calculator-input-tip-container-buttons {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .main-calculator-output {
+        padding: 20px;
+    }
 }
